// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clientMode custom client on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "open",
  "liveReload",
  "<i> [WDS] Live Reloading enabled.",
  "hash",
  "ok",
  "<e> [WDS] Disconnected!",
]
`;

exports[`clientMode sockjs on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "<i> [WDS] Live Reloading enabled.",
  "<e> [WDS] Disconnected!",
]
`;

exports[`clientMode ws on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "<i> [WDS] Live Reloading enabled.",
  "<e> [WDS] Disconnected!",
]
`;
